dsp-cli/tests/snapshots/auth_snapshots__auth_status_csv_env_unknown.snap
---
source: tests/auth_snapshots.rs
expression: out
---
server,user,expires_at,state
https://api.example.com,,,logged_in
