dsp-cli/tests/snapshots/auth_snapshots__auth_status_json_env_expired.snap
---
source: tests/auth_snapshots.rs
assertion_line: 348
expression: buf_to_string(&buf)
---
{"_meta":{"server":"https://api.example.com","auth":"authenticated via DSP_TOKEN","exit_code":0},"data":{"user":null,"expires_at":"2020-01-01T00:00:00+00:00","state":"expired"}}
