dsp-cli/tests/snapshots/auth_snapshots__auth_status_json_not_logged_in.snap
---
source: tests/auth_snapshots.rs
assertion_line: 472
expression: buf_to_string(&buf)
---
{"_meta":{"server":"https://api.example.com","auth":"anonymous","exit_code":0},"data":{"user":null,"expires_at":null,"state":"not_logged_in"}}
